--- a/_config/injector.yml
+++ b/_config/injector.yml
@@ -6,3 +6,9 @@ Injector:
   'Milkyway\SS\InfoBoxes\Wunderlist\InfoBox_Wunderlist':
     constructor:
       0: '%$Milkyway\SS\InfoBoxes\Wunderlist\Provider'
+
+  'InfoBox_Wunderlist_Uri':
+    class: 'GuzzleHttp\Psr7\Uri'
+
+  'InfoBox_Wunderlist_Client':
+    class: 'GuzzleHttp\Client'
