--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,25 @@
 {
-	"name": "milkyway-multimedia/ss-infoboxes-wunderlist",
-	"description": "CMS Info boxes to connect to Wunderlist API",
-    "type"        : "silverstripe-module",
-    "keywords"    : ["silverstripe", "Wunderlist", "conditional", "info", "boxes", "cms"],
-    "license"     : "MIT",
-    "require"     : {
-        "stnvh/silverstripe-infoboxes"     : "~1",
-        "milkyway-multimedia/ss-mwm" : "dev-master",
-        "guzzlehttp/guzzle"          : "~4"
-    },
-    "extra"       : {
-        "installer-name" : "infoboxes-wunderlist"
+  "name": "milkyway-multimedia/ss-infoboxes-wunderlist",
+  "description": "CMS Info boxes to connect to Wunderlist API",
+  "type": "silverstripe-module",
+  "keywords": [
+    "silverstripe",
+    "Wunderlist",
+    "conditional",
+    "info",
+    "boxes",
+    "cms"
+  ],
+  "license": "MIT",
+  "require": {
+    "stnvh/silverstripe-infoboxes": "~1",
+    "milkyway-multimedia/ss-mwm"  : "~0.3",
+    "guzzlehttp/guzzle"           : "~6"
+  },
+  "extra": {
+    "installer-name": "infoboxes-wunderlist",
+    "branch-alias": {
+      "dev-master": "0.2.x-dev"
     }
+  }
 }
